eks-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: org-ingress
  namespace: staging
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"  
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: service-name
                port:
                  number: 3000
    - host: www.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: service-name
                port:
                  number: 4001
    - host: www.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: service-name
                port:
                  number: 4000
    - host: www.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: service-name
                port:
                  number: 4002
    - host: grafana.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 31204
                
  tls:
    - hosts:
        - www.com
        - www.com
        - www.com
        - www.com
        - grafana.com
      secretName: tls-secret
